# ChangeLog for dev-python/twisted-web
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/twisted-web/ChangeLog,v 1.40 2009/01/09 17:54:49 patrick Exp $

*twisted-web-8.2.0 (09 Jan 2009)

  09 Jan 2009; Patrick Lauer <patrick@gentoo.org> +twisted-web-8.2.0.ebuild:
  Bump to 8.2.0

  08 Jan 2009; Patrick Lauer <patrick@gentoo.org>
  -twisted-web-0.5.0-r1.ebuild, -twisted-web-0.5.0-r3.ebuild,
  -twisted-web-0.6.0.ebuild, -twisted-web-0.7.0.ebuild,
  -twisted-web-8.0.0.ebuild:
  Removing old

  20 Dec 2008; nixnut <nixnut@gentoo.org> twisted-web-8.1.0.ebuild:
  Stable on ppc wrt bug 231675

  13 Aug 2008; Santiago M. Mola <coldwind@gentoo.org>
  twisted-web-8.1.0.ebuild:
  amd64 stable wrt bug #231675

  08 Aug 2008; Raúl Porcel <armin76@gentoo.org> twisted-web-8.1.0.ebuild:
  alpha/ia64/x86 stable wrt #231675

  08 Aug 2008; Markus Rothe <corsair@gentoo.org> twisted-web-8.1.0.ebuild:
  Stable on ppc64; bug #231675

  08 Aug 2008; Jeroen Roovers <jer@gentoo.org> twisted-web-8.1.0.ebuild:
  Stable for HPPA (bug #231675).

  05 Aug 2008; Ferris McCormick <fmccor@gentoo.org>
  twisted-web-8.1.0.ebuild:
  Sparc stable, part of Bug #231675.

*twisted-web-8.1.0 (25 May 2008)

  25 May 2008; Thomas Raschbacher <lordvan@gentoo.org>
  +twisted-web-8.1.0.ebuild:
  Version Bump

*twisted-web-8.0.0 (13 May 2008)

  13 May 2008; Ali Polatel <hawking@gentoo.org> +twisted-web-8.0.0.ebuild:
  Version bump.

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Marien Zwart (marienz, #107204) from metadata.xml.

  09 Jun 2007; Joe Peterson <lavajoe@gentoo.org> twisted-web-0.7.0.ebuild:
  Add ~x86-fbsd keyword

  12 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  twisted-web-0.6.0.ebuild:
  Stable on sparc

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org> twisted-web-0.6.0.ebuild:
  x86 stable

*twisted-web-0.7.0 (11 Jan 2007)
