@@ -2,7 +2,7 @@ AUX twisted-web-0.5.0-root-skip.patch 475 RMD160 5a93f37912c00bb9f8b139b54c68901
 AUX twisted-web-0.5.0-tests-2.2-compat.patch 4006 RMD160 23b068ebde8fc096117b6beff15ddf2b559eb320 SHA1 aa9d1a1a8698d191ca9acde578a348fcbe95bd26 SHA256 b0bd817232f37eba306a86fe0463cf509e94b8a37c7a032ebbfd0b59b8f7a24d
 DIST TwistedWeb-8.1.0.tar.bz2 275009 RMD160 64a0186c8de785bbc1db58351b8d4fa66a81618e SHA1 e1e024b5306aec1d595e44de37407ad2f3f7ebc3 SHA256 59d7ef9c611ea4ff28ed919253e7f150ccc63faee7f7ef9cb5f45f4307398d85
 DIST TwistedWeb-8.2.0.tar.bz2 332055 RMD160 c16086789e054ab27fd782b6926c274c11209f9e SHA1 bb665721c33143f781819bfdde81098d9ae14b10 SHA256 f30aba803a9b18a17e0d2b58ace6e53269781e8bc1161b2e90d4527b85109f6f
-EBUILD twisted-web-8.1.0.ebuild 589 RMD160 f6c299452c4b2adc013c9229158fcd4b6fed81aa SHA1 95e6f42c2fda8d5c6e546060137fb17c2e620c9c SHA256 fc2eb395973ed6f38361c35783107b2218dba867ab8403f2967da8ce8cbf143f
-EBUILD twisted-web-8.2.0.ebuild 600 RMD160 1207a467149cceb4ad4628bb68a83d4a0ae39208 SHA1 0f8aacd54e189e22b2947a4fe0245f67cdcba560 SHA256 a09280601e3621d14fdffc08c33c6f9495f9e0fe80603117e52f1ed583ad7226
-MISC ChangeLog 6056 RMD160 4de7de12d08a6707b2935998b39f79e506e4a4d9 SHA1 0762851929a17656e789f2ca818f5e73df38c358 SHA256 b4b77b9bbcd2a4c8d1ce7e18dcf0d5e875c1039b6476c96a835842e75b28b0ea
+EBUILD twisted-web-8.1.0.ebuild 612 RMD160 4345f8b019f81eac898c6a18e86a1ea2532f5647 SHA1 f7c8158f0828722d12ca2bb93b5186eca557bcd6 SHA256 6494a728921da09a8198d82653f77b7004546fe768c73aa1d273f250d2969082
+EBUILD twisted-web-8.2.0.ebuild 656 RMD160 f588b68c6dd36cc6b85859182d75f9d3f381d3ce SHA1 6aa1f85913093fe543df0750cd2a18d3c41f9653 SHA256 b46fa60c66e83e8d5548b104c0488c67a9e6fd6b5c8ba4494f56865314a08cdc
+MISC ChangeLog 6165 RMD160 793a40f0fb4909486a69a578c57ad121d14e8dda SHA1 93c396fbe4022ff8cb6b4779fb77274ef15ce53e SHA256 e02335daf033e7e6633420528a5208295eb7c43cecd7bcacac72e708d19ccd81
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
