@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/twisted-web/Attic/twisted-web-8.2.0.ebuild,v 1.1 2009/01/09 17:54:49 patrick Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/twisted-web/Attic/twisted-web-8.2.0.ebuild,v 1.2 2009/07/21 11:59:12 ssuominen Exp $
 
 MY_PACKAGE=Web
 
@@ -10,9 +10,11 @@ DESCRIPTION="Twisted web server, programmable in Python"
 
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
 
-DEPEND="=dev-python/twisted-$(get_version_component_range 1-2)*"
+RDEPEND="=dev-python/twisted-$(get_version_component_range 1-2)*
+	soap? ( dev-python/soappy )"
+DEPEND="${RDEPEND}"
 
-IUSE=""
+IUSE="soap"
 
 src_unpack() {
 	unpack ${A}
